--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -3,7 +3,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Language" content="zh-CN" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
     <title>深圳大学学子天地管理系统</title>
     {% load html_tools %}
@@ -17,30 +16,12 @@
     {{ 'plugins/jquery.form.js' | as_js }}
     {{ 'admin/upload.js' | as_js }}
     {% block htmlhead %}{% endblock %}
-    <!-- boostrap -->
-    <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap-theme.min.css"></script>
-    <script src="http://apps.bdimg.com/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 {% block beforeload %}{% endblock %}
-<body onload="heightCtrol() selected()" onresize="heightCtrol()">
+<body onload="heightCtrol()" onresize="heightCtrol()">
     <div class="container">
         <div id="header">
-            <h1 class="hidden-xs">深圳大学学子天地 后台管理系统</h1>
-            <div class="phonevision visible-xs">
-                <h2 class="">后台管理</h2>
-                <span class="navbox " id="nav_menu">
-                    <span><strong>{{ user.student.screen_name }}</strong></span>
-                    <a href="/">返回首页</a>
-                    {% if user.is_authenticated %}
-                    <a href="{% url 'account:profile' %}">用户信息</a>
-                    <a href="javascript:;" onclick="StuCampus.signOut()">退出登录</a>
-                    {% else %}
-                    <a href="{% url 'account:sign_in' %}">登录</a>
-                    {% endif %}
-                </span>
-            </div>
+            <h1>深圳大学学子天地 后台管理系统</h1>
             <span class="nav" id="nav_menu">
                 <span><strong>{{ user.student.screen_name }}</strong></span>
                 <a href="/">返回首页</a>
@@ -52,119 +33,60 @@
                 {% endif %}
             </span>
         </div>
-        <div class="smNav btn-group  visible-xs">
-           <button type="button" class="btn btn-primary dropdown-toggle" 
-              data-toggle="dropdown">
-              菜单 <span class="caret"></span>
-           </button>
-           <ul class="dropdown-menu" role="menu">
-              {% load permission_check %}
-                {% if user %}
-                    <li><a href="/manage/index">后台管理</a></li>
-                {% endif %}
-
-                {% if perms.account.student_manager %}
-                    <li><a href="/manage/account/list">用户管理</a></li>
-                {% endif %}
-                {% if perms.magazine.magazine_add%}
-                    <li><a href="/magazine/manage/">杂志管理</a></li>
-                {% endif %}
-                {% if perms.organization.organization_manager %}
-                    <li><a href="/manage/organization/list">组织管理</a></li>
-                    <li><a href="/manage/organization">组织概况</a></li>
-                {% endif %}
-                {% if perms.articles.article_add %}
-                    <li><a href="{% url 'articles:add' %}">添加文章</a></li>
-                    <li><a href="{% url 'articles:manage' %}">文章列表</a></li>
-                {% endif %}
-                {% if perms.articles.article_manage %}
-                    <li><a href="{% url 'articles:category' %}">文章分类</a></li>
-                {% endif %}
-                {% if perms.account.website_admin %}
-                    <li><a href="{% url 'lecture:manage' %}">讲座信息</a></li>
-                    <li><a href="{% url 'activity:manage' %}">活动信息</a></li>
-                {% endif %}
-                {% if perms.szuspeech.manager %}
-                    <li><a href="{% url 'szuspeech:manage_list' %}">讲座资源</a></li>
-                    <li><a href="{% url 'szuspeech:add' %}">资源添加</a></li>
-                {% endif %}
-
-
-                <!-- 以下代码未完成 -->
-                <!-- 以下为提供给社团组织的管理界面 -->
-                {% if 0 %}
-                    <li><a href="/organization/">组织管理</a></li>
-                {% endif %}
-                {% if perms.infor.infors_list and user|is_org_manage %}
-                    <li><a href="/manage/infor/list">信息管理</a></li>
-                {% endif %}
-                {% if perms.infor.infor_create and user|is_org_manage %}
-                    <li><a href="/manage/infor/post">发布信息</a></li>
-                {% endif %}
-                {% if perms.infor.posted_infor_view %}
-                    <li><a href="#">已发信息</a>{% endif %}</li>
-                {% if perms.magazine.magazine_view %}
-                    <li><a href="/magazine">社团杂志</a></li>
-                {% endif %}
-                {% if perms.FreeTimeCount.usable %}
-                    <li><a href="/freetimecount">空闲时间</a></li>
-                {% endif %}
-           </ul>
-        </div>
         <div class="main" id="layout_main">
-            <div class="menu_container hidden-xs">
-                <ul class="left_menu" id="layout_left">
+            <div class="menu_container">
+                <div class="left_menu" id="layout_left">
                 {% load permission_check %}
                 {% if user %}
-                    <li><a href="/manage/index">后台管理</a></li>
+                    <a href="/manage/index">后台管理</a>
                 {% endif %}
 
                 {% if perms.account.student_manager %}
-                    <li><a href="/manage/account/list">用户管理</a></li>
+                    <a href="/manage/account/list">用户管理</a>
                 {% endif %}
                 {% if perms.magazine.magazine_add%}
-                    <li><a href="/magazine/manage/">杂志管理</a></li>
+                    <a href="/magazine/manage/">杂志管理</a>
                 {% endif %}
                 {% if perms.organization.organization_manager %}
-                    <li><a href="/manage/organization/list">组织管理</a></li>
-                    <li><a href="/manage/organization">组织概况</a></li>
+                    <a href="/manage/organization/list">组织管理</a>
+                    <a href="/manage/organization">组织概况</a>
                 {% endif %}
                 {% if perms.articles.article_add %}
-                    <li><a href="{% url 'articles:add' %}">添加文章</a></li>
-                    <li><a href="{% url 'articles:manage' %}">文章列表</a></li>
+                    <a href="{% url 'articles:add' %}">添加文章</a>
+                    <a href="{% url 'articles:manage' %}">文章列表</a>
                 {% endif %}
                 {% if perms.articles.article_manage %}
-                    <li><a href="{% url 'articles:category' %}">文章分类</a></li>
+                    <a href="{% url 'articles:category' %}">文章分类</a>
                 {% endif %}
                 {% if perms.account.website_admin %}
-                    <li><a href="{% url 'lecture:manage' %}">讲座信息</a></li>
-                    <li><a href="{% url 'activity:manage' %}">活动信息</a></li>
+                    <a href="{% url 'lecture:manage' %}">讲座信息</a>
+                    <a href="{% url 'activity:manage' %}">活动信息</a>
                 {% endif %}
                 {% if perms.szuspeech.manager %}
-                    <li><a href="{% url 'szuspeech:manage_list' %}">讲座资源</a></li>
-                    <li><a href="{% url 'szuspeech:add' %}">资源添加</a></li>
+                    <a href="{% url 'szuspeech:manage_list' %}">讲座资源</a>
+                    <a href="{% url 'szuspeech:add' %}">资源添加</a>
                 {% endif %}
 
 
                 <!-- 以下代码未完成 -->
                 <!-- 以下为提供给社团组织的管理界面 -->
                 {% if 0 %}
-                    <li><a href="/organization/">组织管理</a></li>
+                    <a href="/organization/">组织管理</a>
                 {% endif %}
                 {% if perms.infor.infors_list and user|is_org_manage %}
-                    <li><a href="/manage/infor/list">信息管理</a></li>
+                    <a href="/manage/infor/list">信息管理</a>
                 {% endif %}
                 {% if perms.infor.infor_create and user|is_org_manage %}
-                   <li> <a href="/manage/infor/post">发布信息</a></li>
+                   <a href="/manage/infor/post">发布信息</a>
                 {% endif %}
                 {% if perms.infor.posted_infor_view %}
-                    <li><a href="#">已发信息</a></li>
+                    <a href="#">已发信息</a>
                 {% endif %}
                 {% if perms.magazine.magazine_view %}
-                    <li><a href="/magazine">社团杂志</a></li>
+                    <a href="/magazine">社团杂志</a>
                 {% endif %}
                 {% if perms.FreeTimeCount.usable %}
-					<li><a href="/freetimecount">空闲时间</a></li>
+					<a href="/freetimecount">空闲时间</a>
                 {% endif %}
                 </div>
             </div>
@@ -174,12 +96,8 @@
             </div>
         </div>
         <div id="footer">
-            <p class="hidden-xs">Power By 深圳大学学子天地 技术开发部 Copyright &copy; 2010-2016 深圳大学学子天地 站务委员会</p>
-            <p class="visible-xs">Power By 技术部</p>
-            <p class="visible-xs">Copyright &copy;</p>
-            <p class="visible-xs">2010-2016站务委员会</p>
+            <p>Power By 深圳大学学子天地 技术开发部 Copyright &copy; 2010-2016 深圳大学学子天地 站务委员会</p>
         </div>
     </div>
 </body>
 </html>
-
